Addedcacheing so map doesn't have to reload each time the user visits the map screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.LoadingActivity"/>
+        <activity android:name=".Activities.CollectCoinzActivity"/>
         <activity android:name=".Activities.IntroductionActivity"/>
         <activity android:name=".Activities.CoinzNavigationActivity">
         </activity>
