--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.LoadingActivity"/>
+        <activity android:name=".Activities.LoginSignupActivity"/>
         <activity android:name=".Activities.ViewCollectedCoinzActivity"/>
         <activity android:name=".Activities.CollectCoinzActivity"/>
         <activity android:name=".Activities.IntroductionActivity"/>
         <activity android:name=".Activities.CoinzNavigationActivity"/>
         <activity android:name=".Activities.DepositCoinzActivity"/>
         <activity android:name=".Activities.TradeActivity"/>
+        <activity android:name=".Activities.PendingTradeActivity"/>
     </application>
 
 </manifest>
